Добавлены механики инвентаря и предметов.

--- a/RPGtask/data/tasks.json
+++ b/RPGtask/data/tasks.json
@@ -1,1 +1,1 @@
-{"user_tasks": [], "daily_tasks": {"tasks": [["Прочитать 10 страниц", ["интеллект", "эрудиция"], true], ["Сделайте 15 минутную зарядку", ["сила", "выносливость"], true], ["Полей цветочки", ["сила", "выносливость"], true]], "done": false, "date": "2024-08-05"}, "quests": []}
+{"user_tasks": [], "daily_tasks": {"tasks": [["Прочитать 10 страниц", ["интеллект", "эрудиция"], true], ["Сделайте 15 минутную зарядку", ["сила", "выносливость"], true], ["Полей цветочки", ["сила", "выносливость"], true]], "done": true, "date": "2024-07-07"}, "quests": []}
