--- a/RPGtask/data/tasks.json
+++ b/RPGtask/data/tasks.json
@@ -1,1 +1,1 @@
-{"user_tasks": [], "daily_tasks": {"tasks": [["Сделайте 15 минутную зарядку", ["сила", "выносливость"], false], ["Полей цветочки", ["сила", "выносливость"], false], ["Прочитать 10 страниц", ["интеллект", "эрудиция"], false]], "done": false, "date": "2024-07-10"}, "quests": {"forgotten_city": [[], 1, [false, false]]}}
+{"user_tasks": [], "daily_tasks": {"tasks": [], "done": false, "date": "1900-01-01"}, "quests": {}}
