Доделана система квестов. Добавлен магазин квестов. Немного переделаны ежедневные задачи.

--- a/RPGtask/data/tasks.json
+++ b/RPGtask/data/tasks.json
@@ -1,1 +1,1 @@
-{"user_tasks": [], "daily_tasks": {"tasks": [], "done": false, "date": "1900-01-01"}, "quests": {}}
+{"user_tasks": [], "daily_tasks": {"tasks": [["power_1", true], ["reader_1", true], ["reader_2", true]], "done": true, "date": "2024-07-18"}, "quests": {}}
