Обновлены задания и квесты.

--- a/RPGtask/data/tasks.json
+++ b/RPGtask/data/tasks.json
@@ -1,1 +1,1 @@
-{"user_tasks": [], "daily_tasks": {"tasks": [], "done": false, "date": "1900-01-01"}, "quests": {}}
+{"user_tasks": [], "daily_tasks": {"tasks": [], "date": "1900-01-01"}, "quests": {}}
