Фикс отметки заданий

--- a/RPGtask/content/quests.yaml
+++ b/RPGtask/content/quests.yaml
@@ -21,7 +21,6 @@
       rewards: [end]
   rewards: {gold: 0.5, items: []}
 
-
 ##########################################         E ранг         ######################################################
 - id: lost_pet
   name: Потерявшийся питомец
@@ -40,7 +39,7 @@
   rank: E
   stages:
     1:
-      name: Бойня
+      name: Сложная битва
       goals: [[boss, Стая диких зайцев, 3]]
       rewards: [end]
   rewards: {gold: 1, items: []}
