--- a/RPGtask/content/quests.yaml
+++ b/RPGtask/content/quests.yaml
@@ -2,6 +2,7 @@
 - id: warehouse_assistant
   name: Помощник на склад
   description: Мне нужно перенести кучу вещей, а людей не хватает. В идеале нужен кто-то сильный.
+  in_guild: yes
   rank: F
   stages:
     1:
@@ -13,6 +14,7 @@
 - id: fast_delivery
   name: Быстрая доставка
   description: Я хочу отправить письмо своим родителям в деревню. Буду благодарен, если вы доставите его как можно быстрее.
+  in_guild: yes
   rank: F
   stages:
     1:
@@ -25,6 +27,7 @@
 - id: lost_pet
   name: Потерявшийся питомец
   description: Мой питомец пропал и не возвращается домой. Я потратила все деньги на его поиски, пожалуйста, помогите.
+  in_guild: yes
   rank: E
   stages:
     1:
@@ -36,6 +39,7 @@
 - id: tear_off
   name: Обдираловка
   description: У меня не хватает шкурок диких зайцев для пошива одежды. Прошу, принесите пару штук.
+  in_guild: yes
   rank: E
   stages:
     1:
@@ -46,6 +50,7 @@
 
 - id: help_kitchen
   name: Кулинар
+  in_guild: yes
   description: В последнее время мы получаем много заказов, мне нужны дополнительные руки на кухне. Если поможете, буду благодарна.
   rank: E
   stages:
@@ -62,6 +67,7 @@
 - id: state_inspection
   name: Тайная проверка
   description: Недавно я выделил средства на реставрацию культурного учреждения. Прошу вас узнать, как продвигаются работы.
+  in_guild: yes
   rank: D
   stages:
     1:
@@ -81,6 +87,7 @@
 - id: clear_area_coyotes
   name: Зачистка логова
   description: Возле города появились койоты, которые мешают торговцам проехать. Быстрее разберитесь с ними.
+  in_guild: yes
   rank: C
   stages:
     1:
